test/sema/call-nonfunction-variable.delta.output
call-nonfunction-variable.delta:6:15: error: 'foo' is not a function
    var bar = foo();
              ^
