test/sema/call-nonfunction-variable.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    var foo = 5;
    // CHECK: [[@LINE+1]]:15: error: 'foo' is not a function
    var bar = foo();
}
